# csa_lab_4_v2

./: .gitignore  .markdownlint.yaml  Makefile  README.md  golden_tests.py  isa.py  machine_cli.py  pyproject.toml  requirements.txt  test_golden.py
.github/workflows/: ci.yml
core/: control_unit.py  cpu.py  datapath.py  io.py  runner.py
docs/schemas/: controlunit.drawio  datapath.drawio
examples/: cat.alg  cat.input  double_precision.input  hello_user_name.input  prob2.alg  sort.alg  sort.input
golden/cat/: meta.json  out.txt  program.hex  trace.txt
golden/cat_trap/: meta.json  out.txt  program.alg  program.hex  schedule.txt  trace.txt
golden/double_precision/: meta.json  out.txt  program.alg  program.hex  trace.txt
golden/hello_user_name/: meta.json  out.txt  program.alg  program.hex  trace.txt
golden/hello_world/: meta.json  out.txt  program.alg  program.hex  trace.txt
golden/prob2/: meta.json  out.txt  program.hex  schedule.txt  trace.txt
golden/sort/: meta.json  out.txt  program.hex  trace.txt
temp_test/: prob2_schedule.txt
translator/: __init__.py  cli.py  codegen.py  lexer.py  parser.py
